<resources>
    <string name="app_name">Text Scanner</string>
    <string name="internal_storage_documents_text_scanner">internal storage/Documents/Text Scanner/..</string>
    <string name="save">Save Note</string>
    <string name="delete">Delete</string>
    <string name="word_file">Word File</string>
    <string name="file_name">File Name…</string>
    <string name="save_file">Save File</string>
    <string name="save_new_file">Save New File</string>
    <string name="txt_file">Txt File</string>
    <string name="pick_image_intent_chooser_title">pick image</string>
    <string name="delete_note">Delete Note!</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="note_removed_successfully">Note removed successfully</string>
    <string name="cancel">Cancel</string>
    <string name="savefile">saveFile</string>
    <string name="failed_to_recognize_text_try_again">Failed to recognize text! try again</string>
    <string name="required">required</string>
    <string name="file_saved_successfully">File saved successfully</string>
    <string name="note_has_been_added_successfully">Note has been added successfully</string>
    <string name="copy">Copy</string>
    <string name="please_update_your_Google_Play_Service_on_your_device">recognition module not be downloaded, please update your Google Play Service on your device</string>
    <string name="numbers">Numbers</string>
    <string name="text">Text</string>
    <string name="text_scanner">Text Scanner</string>
    <string name="choose_the_type_of_scan">Choose the type of scan</string>
    <string name="numbers_detected">numbers detected</string>
    <string name="sum_of_numbers">Sum of numbers</string>
    <string name="greatest_number">Greatest number</string>
    <string name="repetition">Repetition</string>
    <string name="number">number</string>
    <string name="repeated">repeated</string>
    <string name="smallest_number">Smallest number</string>
    <string name="review_numbers">Review Numbers</string>
    <string name="review_text">Review Text</string>
    <string name="saved_notes">Saved Notes</string>
    <string name="last_modified">Last modified</string>
    <string name="copied">Copied</string>
</resources>