<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/save_new_file"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:text="@string/internal_storage_documents_text_recognizer"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="12sp"
        android:textColor="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:hint="@string/file_name"
        app:boxBackgroundColor="#EBEBFF"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="16sp"
        app:counterEnabled="true"
        app:counterMaxLength="22"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:startIconTint="#6B6B6B">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFileName"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:maxLength="22"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupFile"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="240dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioTxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/txt_file"/>


        <RadioButton
            android:id="@+id/radioWord"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/word_file"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/save_file"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupFile"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupFile"/>

</androidx.constraintlayout.widget.ConstraintLayout>